# eigenbot

./: Setup.hs  TODO.md  eigenbot.cabal
src/: Base.hs  Main.hs  Main2.hs  Plugin.hs  Util.hs
src/Plugins/: Date.hs  Github.hs  ID.hs  Karma.hs  Pong.hs  Postpone.hs  Simple.hs  UrlTitle.hs
